@@ -149,6 +149,10 @@ New config options:
 - gameGuard (flag)
   Set this option to 1 if you play inRO or pRO Sakray.
   Set this option to 2 if you play bRO.
+- aggressiveAntiKS (flag)
+  Set this to 1 to make the anti-KS code more aggressive. Kore will drop
+  the monster if others have attacked it, regardless of whether the monster
+  attacked you or whether you have attacked it.
 
 New commands:
 - cart release: remove cart status
